--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="/images/icon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>August</title>
+    <title>Business Сard</title>
     <script src="./dat.gui.min.js"></script>
     
         <script>
