--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="container">
         <div class="overlay">
-            <span>&lt/kyni_men&gt</span>
+            <span>&lt/August&gt</span>
         </div>
     </header>
 
